Add user projects to user profile response and handle forking
