# backend/api/src/main/java/net/functionhub/api/dto/SessionUser.java
@@ -1,9 +1,11 @@
 package net.functionhub.api.dto;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import lombok.Getter;
 import lombok.Setter;
+import net.functionhub.api.Project;
 import net.functionhub.api.service.user.UserService.AuthMode;
 
 /**
@@ -26,5 +28,6 @@ public class SessionUser {
   private Long maxFunctions;
   private Long maxProjects;
   private AuthMode authMode;
+  private List<Project> projects;
   private Map<String, Boolean> roles = new HashMap<>();
 }
