# backend/api/src/main/java/net/functionhub/api/service/runtime/RuntimeService.java
@@ -59,7 +59,7 @@ public interface RuntimeService {
   String getUserCode(String uid);
   GenericResponse handleExecResult(ExecResultAsync execResult);
   String generateCodeVersion();
-  CodeUpdateResult updateCode(Code code);
+  CodeUpdateResult updateCode(Code code, boolean forked, String projectId);
   Code getCodeDetail(String uid);
   void generateJsonSchema(SessionUser sessionUser, String code, String uid);
   String getJsonSchema(String uid);
